<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recommendingPageListCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:elevation="8dp"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:contentPadding="8dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/recommendingPageListTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="16dp"
            android:text="@string/list_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/recommendingPageListInstructor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="1dp"
            android:paddingStart="5dp"
            android:text="@string/list_instructor"
            android:textAlignment="textStart"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/recommendingPageListInstructorIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/recommendingPageListInstructorIcon"
            android:layout_width="22dp"
            android:layout_height="24dp"
            android:layout_marginStart="260dp"
            app:layout_constraintBottom_toBottomOf="@+id/recommendingPageListInstructor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/recommendingPageListInstructor"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_instructor"
            android:contentDescription="@string/instructor_icon_content_id" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>